@@ -1,30 +1,25 @@
 package io.github.the_infinite.framework.data;
 
-import io.github.the_infinite.framework.data.types.ChangeResultModel;
-import io.github.the_infinite.framework.data.types.PaginatedResult;
-import io.github.the_infinite.framework.data.types.RepositoryOptions;
-
-import io.vertx.core.Future;
-import io.vertx.core.json.JsonObject;
-import io.vertx.ext.mongo.MongoClient;
-import io.vertx.ext.mongo.FindOptions;
-import io.vertx.ext.mongo.BulkOperation;
-import io.vertx.ext.mongo.BulkWriteOptions;
-
-import jakarta.persistence.Table;
 import org.bson.types.ObjectId;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
+
+import io.github.the_infinite.framework.data.types.ChangeResultModel;
+import io.github.the_infinite.framework.data.types.PaginatedResult;
+import io.github.the_infinite.framework.data.types.RepositoryOptions;
+import io.vertx.core.Future;
+import io.vertx.core.json.JsonObject;
+import io.vertx.ext.mongo.BulkOperation;
+import io.vertx.ext.mongo.BulkWriteOptions;
+import io.vertx.ext.mongo.FindOptions;
+import io.vertx.ext.mongo.MongoClient;
+import jakarta.persistence.Table;
 
 @SuppressWarnings({"unused", "FieldCanBeLocal"})
 public final class PersistentMongoRepository<TModel extends BaseMongoEntity, TModule extends Enum<?>> {
@@ -162,7 +157,7 @@ public final class PersistentMongoRepository<TModel extends BaseMongoEntity, TMo
         return mongoClient.count(collectionName, filter != null ? filter.getQuery() : new JsonObject()).map(count -> {
           String nextCursor = null;
           if (items.size() == limit) {
-            nextCursor = items.getLast().getId();
+            nextCursor = items.get(items.size() - 1).getId();
           }
           return new PaginatedResult<>(items, limit, count, options != null ? options.getCursor() : null, nextCursor);
         });
